Fixed content being cut off when window reached certain height thresholds

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@ p {
 
 .container {
   max-width: 650px;
+  max-height: 80%;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -95,7 +96,7 @@ p {
 
   .container {
     max-width: 300px;
-    height: 100%;
+    height: 80%;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-areas: "top"
